
export interface Equipment {
    id: number;
    name: string;
    description: string;
    vendorUrl: string;
    createdAt: Date;
}