erDiagram
    Course {
        uuid id PK
        string title
        blob image
        text description
        json goals
        json timetable
        float price
        int durationMinutes
        string introVideoUrl
        int max_capacity
        timestamp createdAt
        uuid teacherId FK
        uuid difficulty_id FK

    }

    Difficulty {
        uuid id PK
        string name
    }

    Teacher {
        uuid id PK
        string name
        blob photo
        text biography
        json certificates
        json socialMedia
        timestamp createdAt
    }

    Student {
        uuid id PK
        string name
        string email
        string phone
        timestamp dateOfBirth
        string address
        blob photo
        timestamp createdAt
    }

    Feedback {
        uuid id PK
        uuid studentId FK
        uuid courseId FK
        text comment
        int rating
        timestamp createdAt
    }

    Subscription {
        uuid id PK
        string name
        string type
        float price
        text description
        int durationDays
        bool isActive
        timestamp createdAt
    }

    CourseSubscription {
        uuid courseId PK,FK
        uuid subscriptionId PK,FK
    }

    Article {
        uuid id PK
        string title
        text content
        blob image
        json authors
        timestamp publishedAt
        text snippet
        json tags
        bool isPublished
        int viewsCount
        timestamp createdAt
    }

    ArticleCourse {
        uuid articleId PK,FK
        uuid courseId PK,FK
    }

    Event {
        uuid id PK
        string title
        blob image
        timestamp date
        timestamp endDate
        text description
        string location
        int capacity
        float price
        bool isFree
        bool registrationRequired
        timestamp createdAt
        uuid teacherId FK
    }

    ArticleEvent {
        uuid articleId PK,FK
        uuid eventId PK,FK
    }

    StudentCourse {
        uuid studentId PK,FK
        uuid courseId PK,FK
        timestamp enrollmentDate
        string status
    }

    StudentSubscription {
        uuid id PK
        uuid studentId FK
        uuid subscriptionId FK
        timestamp startDate
        timestamp endDate
        string paymentStatus
        string paymentMethod
        bool isActive
        timestamp createdAt


    }

    Equipment {
        uuid id PK
        string name
        blob image
        text description
        string vendorURL
        timestamp createdAt
    }

    CourseEquipment {
        uuid courseId PK,FK
        uuid equipmentId PK,FK
        int quantity
        boolean isRequired
    }

    Teacher ||--o{ Course : "teach"
    Student ||--o{ Feedback : "give"
    Course ||--o{ Feedback : "get"
    Course ||--o{ CourseSubscription : "included in"
    Subscription ||--o{ CourseSubscription : "include"
    Article ||--o{ ArticleCourse : "for"
    Course ||--o{ ArticleCourse : "mentioned in"
    Article ||--o{ ArticleEvent : "for"
    Event ||--o{ ArticleEvent : "mentioned in"
    Teacher ||--o{ Event : "animate"
    Student ||--o{ StudentCourse : "register in"
    Course ||--o{ StudentCourse : "follow by"
    Course ||--o{ CourseEquipment : "employ"
    Course }o--|| Difficulty : "has difficulty"
    Equipment ||--o{ CourseEquipment : "used in"
    Student o|--|| StudentSubscription : "has"
    Subscription ||--|| StudentSubscription : "is for"